[package]
name = "binary-stream"
version = "4.2.0"
authors = [
  "Mathias Danielsen <mathiasda98@hotmail.com>",
  "Muji <muji@tmpfs.org>"
]
edition = "2021"
description = "Binary stream reader and writer"
repository = "https://github.com/tmpfs/binary-stream"
readme = "README.md"
keywords = ["binary", "reader", "writer"]
license = "MIT"

[features]
32bit = []
tokio = ["dep:tokio", "dep:async-trait"]

[dependencies]
thiserror = "1"
tokio = { version = "1", optional = true, default-features = false, features = ["io-util"] }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
anyhow = "1"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "fs"] }

[build-dependencies]
rustc_version = "0.4.0"
