[package]
name = "binary-stream"
version = "8.3.0"
authors = [
  "Mathias Danielsen <mathiasda98@hotmail.com>",
  "Muji <muji@tmpfs.org>"
]
edition = "2021"
description = "Binary stream reader and writer"
repository = "https://github.com/tmpfs/binary-stream"
readme = "README.md"
keywords = ["binary", "reader", "writer"]
license = "MIT"

[features]
default = ["tokio-compat-flush"]
64bit = []
async = ["dep:futures", "dep:async-trait"]
# SEE: https://github.com/tokio-rs/tokio/issues/5764
tokio-compat-flush = []

[dependencies]
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
anyhow = "1"
tempfile = "3.5"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }

[build-dependencies]
rustc_version = "0.4.0"
